--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,10 @@
 
 .packages
 .pub/
+.idea/
+.vscode/
+build/
+# If you're building an application, you may want to check-in your pubspec.lock
+pubspec.lock
 
 build/
